force-app/main/default/objects/Async_Job_Monitor__c/Async_Job_Monitor__c.object-meta.xml
<CustomObject>
    <description>Learning-lab custom object for the Salesforce Dev I & II RoadMap.</description>
    <label>Async Job Monitor</label>
    <nameField>
        <label>Monitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Async Job Monitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>