force-app/main/default/objects/Async_Job_Monitor__c/fields/Completed_Batches__c.field-meta.xml
<CustomField>
    <fullName>Completed_Batches__c</fullName>
    <label>Completed Batches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue></defaultValue>
</CustomField>