force-app/main/default/objects/Async_Job_Monitor__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>TextArea</type>
</CustomField>