force-app/main/default/objects/Async_Job_Monitor__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Queueable</fullName>
                <default>true</default>
                <label>Queueable</label>
            </value>
            <value>
                <fullName>Batchable</fullName>
            </value>
            <value>
                <fullName>Schedulable</fullName>
            </value>
            <value>
                <fullName>Future</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>